@@ -1,195 +1,0 @@
-/*=============================================================================
-    A Standard compliant C++ preprocessor
-
-    Copyright (c) 2001-2003 Hartmut Kaiser
-    http://spirit.sourceforge.net/
-
-    Permission to copy, use, modify, sell and distribute this software
-    is granted provided this copyright notice appears in all copies.
-    This software is provided "as is" without express or implied
-    warranty, and with no claim as to its suitability for any purpose.
-
-    See Copyright.txt for full copyright notices and acknowledgements.
-=============================================================================*/
-
-#include "cpplexer/cpp_token_ids.hpp"
-
-namespace cpplexer {
-
-///////////////////////////////////////////////////////////////////////////////
-//
-//  Table of token names
-//
-//      Please note that the sequence of token names must match the sequence of
-//      token id's defined in the file tokens.h.
-//
-///////////////////////////////////////////////////////////////////////////////
-
-char const *tok_names[] = 
-{
-    "AND",
-    "ANDAND",
-    "ASSIGN",
-    "ANDASSIGN",
-    "OR",
-    "ORASSIGN",
-    "XOR",
-    "XORASSIGN",
-    "COMMA",
-    "COLON",
-    "DIVIDE",
-    "DIVIDEASSIGN",
-    "DOT",
-    "DOTSTAR",
-    "ELLIPSIS",
-    "EQUAL",
-    "GREATER",
-    "GREATEREQUAL",
-    "LEFTBRACE",
-    "LESS",
-    "LESSEQUAL",
-    "LEFTPAREN",
-    "LEFTBRACKET",
-    "MINUS",
-    "MINUSASSIGN",
-    "MINUSMINUS",
-    "PERCENT",
-    "PERCENTASSIGN",
-    "NOT",
-    "NOTEQUAL",
-    "OROR",
-    "PLUS",
-    "PLUSASSIGN",
-    "PLUSPLUS",
-    "ARROW",
-    "ARROWSTAR",
-    "QUESTION_MARK",
-    "RIGHTBRACE",
-    "RIGHTPAREN",
-    "RIGHTBRACKET",
-    "COLON_COLON",
-    "SEMICOLON",
-    "SHIFTLEFT",
-    "SHIFTLEFTASSIGN",
-    "SHIFTRIGHT",
-    "SHIFTRIGHTASSIGN",
-    "STAR",
-    "COMPL",
-    "STARASSIGN",
-    "ASM",
-    "AUTO",
-    "BOOL",
-    "FALSE",
-    "TRUE",
-    "BREAK",
-    "CASE",
-    "CATCH",
-    "CHAR",
-    "CLASS",
-    "CONST",
-    "CONSTCAST",
-    "CONTINUE",
-    "DEFAULT",
-    "DEFINED",
-    "DELETE",
-    "DO",
-    "DOUBLE",
-    "DYNAMICCAST",
-    "ELSE",
-    "ENUM",
-    "EXPLICIT",
-    "EXPORT",
-    "EXTERN",
-    "FLOAT",
-    "FOR",
-    "FRIEND",
-    "GOTO",
-    "IF",
-    "INLINE",
-    "INT",
-    "LONG",
-    "MUTABLE",
-    "NAMESPACE",
-    "NEW",
-    "OPERATOR",
-    "PRIVATE",
-    "PROTECTED",
-    "PUBLIC",
-    "REGISTER",
-    "REINTERPRETCAST",
-    "RETURN",
-    "SHORT",
-    "SIGNED",
-    "SIZEOF",
-    "STATIC",
-    "STATICCAST",
-    "STRUCT",
-    "SWITCH",
-    "TEMPLATE",
-    "THIS",
-    "THROW",
-    "TRY",
-    "TYPEDEF",
-    "TYPEID",
-    "TYPENAME",
-    "UNION",
-    "UNSIGNED",
-    "USING",
-    "VIRTUAL",
-    "VOID",
-    "VOLATILE",
-    "WCHART",
-    "WHILE",
-    "PP_DEFINE",
-    "PP_IF",
-    "PP_IFDEF",
-    "PP_IFNDEF",
-    "PP_ELIF",
-    "PP_ENDIF",
-    "PP_ERROR",
-    "PP_LINE",
-    "PP_PRAGMA",
-    "PP_UNDEF",
-    "PP_WARNING",
-    "IDENTIFIER",
-    "OCTALINT",
-    "DECIMALINT",
-    "HEXAINT",
-    "INTLIT",
-    "FLOATLIT",
-    "CCOMMENT",
-    "CPPCOMMENT",
-    "CHARLIT",
-    "STRINGLIT",
-    "CONTLINE",
-    "SPACE",
-    "SPACE2",
-    "NEWLINE",
-    "POUND_POUND",
-    "POUND",
-    "ANY",
-    "PP_INCLUDE",
-    "PP_QHEADER",
-    "PP_HHEADER",
-    "EOF",
-#if defined(SUPPORT_MS_EXTENSIONS)
-    "MSEXT_INT8",
-    "MSEXT_INT16",
-    "MSEXT_INT32",
-    "MSEXT_INT64",
-    "MSEXT_BASED",
-    "MSEXT_DECLSPEC",
-    "MSEXT_CDECL",
-    "MSEXT_FASTCALL",
-    "MSEXT_STDCALL",
-    "MSEXT_TRY",
-    "MSEXT_EXCEPT",
-    "MSEXT_FINALLY",
-    "MSEXT_LEAVE",
-    "MSEXT_INLINE",
-    "MSEXT_ASM",
-#endif // defined(SUPPORT_MS_EXTENSIONS)
-};   
-     
-///////////////////////////////////////////////////////////////////////////////
-}   // namespace cpplexer
