@@ -6,17 +6,25 @@ See Copyright.txt for full copyright notices and acknowledgements.
 
 -------------------------------------------------------------------------------
 
+Sun Feb 16 08:40:38  2003
 - Added a macro expansion engine which expands macros with arguments
 - Added a new sample: cpp_tokens. This sample preprocesses a given file and
   prints out the string representations of all tokens returned from the pp 
   iterator
+- Added documentation (to be continued!)
+- Added a couple of small test files to test elementary functionality
+- The main cpp sample is now a simple preprocessor driver program, which 
+  outputs the string representation of the preprocessed input stream. Use 
+  cpp --help to get a hint, how to use it.
+- Fixed a bug in the preprocessor grammar which failed to recognize a pp 
+  statement, if there was a C++ comment at the end of the line
 
 Sun Feb  9 23:01:00  2003
 - Improved error handling for #if et.al.
 - Fixed a pair of lexer errors
 - Implemented the #if/#elif statements, the sample now contains a complete C++ 
   expression evaluation engine (for the calculation of the outcome of the 
-  #if/#elif statements)
+  #if/#elif statement conditions)
 - Implemented macro replacement (with parameters)
 - Implemented the '##' [cpp.concat] operator
 - Implemented the defined() [cpp.cond] operator
